<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/oi_generate"
        android:title="@string/oi_generate_text"/>
    <item 
         android:id="@+id/oi_save_script"
         android:title="@string/oi_save_script"/>
    <item 
         android:id="@+id/oi_update_script"
         android:title="@string/oi_update_script"/>
    <item
        android:id="@+id/oi_show_saved"
        android:title="@string/oi_show_saved"
        android:visible="false"/>
    <item
        android:id="@+id/oi_show_saved_alt"
        android:title="@string/oi_show_saved_alt"/>
    <item
        android:id="@+id/oi_settings"
        android:title="@string/oi_settings" />
    <item
        android:id="@+id/oi_about"
        android:title="@string/oi_about_text"/>
    <item
        android:id="@+id/oi_quit"
        android:title="@string/quit"/>    
</menu>