<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_act_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    	<TextView 
	        android:id="@+id/tv_act_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/large"
	        android:text="@string/act"
	        android:textStyle="bold"
	        android:textColor="@color/lightgray"
	        android:tag="act_title"/>
    	<TextView 
	        android:id="@+id/tv_setting_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/medium"
	        android:text="@string/setting"
	        android:textColor="@color/darkgray"
	        android:tag="settings"/>
    	<TextView 
	        android:id="@+id/tv_sequence_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/medium"
	        android:text="@string/sequence"
	        android:textColor="@color/darkgray"
	        android:tag="sequences"/>
    	 <TextView
	        android:id="@+id/tv_complications_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/medium"
	        android:text="@string/complications"
	        android:textColor="@color/darkgray"
	        android:tag="complications"/>   
	    <TextView
	        android:id="@+id/tv_sequence_participants_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/medium"
	        android:text="@string/participants"
	        android:textColor="@color/darkgray"
	        android:tag="participants"/> 	   
	    <TextView
	        android:id="@+id/tv_plottwist_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/medium"
	        android:text="@string/plottwist"
	        android:textColor="@color/darkgray"
	        android:tag="plottwists"/> 
        <ImageView
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingBottom="2dp"
		    android:paddingTop="2dp" />
</LinearLayout>