<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_generatedView"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">  
	    <TextView
	        android:id="@+id/tv_villain_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/villain_title"
	        android:textSize="@dimen/medium"
	        android:textStyle="bold"
	        android:textColor="@color/darkgray"
	        android:tag="villains"/>	   
	    <TextView
	        android:id="@+id/tv_fiendishplan_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/medium"
	        android:textStyle="bold"
	        android:text="@string/fiendish_plot"
	        android:textColor="@color/darkgray"
	        android:tag="fiendishplans"/>	    
	    <TextView
	        android:id="@+id/tv_location_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/medium"
	        android:textStyle="bold"
	        android:text="@string/location"
	        android:textColor="@color/darkgray"
	        android:tag="locations"/>
	    <TextView
	        android:id="@+id/tv_hook_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/medium"
	        android:textStyle="bold"
	        android:text="@string/hook"
	        android:textColor="@color/darkgray"
	        android:tag="hooks"/>
    </LinearLayout>