<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_custom_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_pulp"
    android:orientation="vertical"
    android:visibility="visible" >

    <EditText
        android:id="@+id/et_save_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_save_input"
        android:inputType="textCapSentences"
        android:orientation="horizontal"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_save_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/et_save_input"
        android:paddingLeft="@dimen/small"
        android:paddingRight="@dimen/small"
        android:text="@string/cancel"
        android:textColor="@color/aliceblue"
        android:textSize="@dimen/large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_save_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/et_save_input"
        android:paddingLeft="@dimen/small"
        android:paddingRight="@dimen/small"
        android:text="@string/save"
        android:textColor="@color/aliceblue"
        android:textSize="@dimen/large"
        android:textStyle="bold" />

</RelativeLayout>