<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical"> 
       	<LinearLayout 
       	    android:id="@+id/support_settings_ll"
       	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content" 
       	    android:orientation="horizontal"
       	    android:gravity="center">
       	    <LinearLayout android:layout_width="fill_parent"
        		android:layout_height="wrap_content"  
        		android:orientation="vertical"
        		android:gravity="center"
        		android:layout_weight="1">
	        	<TextView 
	       	        android:id="@+id/supportValMinInc_settings_tv"
	       	        android:layout_width="wrap_content"
	       	        android:layout_height="wrap_content"
	       	        android:textSize="@dimen/large"
	       	        android:textStyle="bold"
	       	        android:textColor="@color/aliceblue"       	        
	       	        android:text="@string/more"/>
	       	    <TextView 
	       	        android:id="@+id/supportValMin_settings_tv"
	       	        android:layout_width="wrap_content"
	       	        android:layout_height="wrap_content"
	       	        android:textSize="@dimen/verylarge"
	       	        android:textStyle="bold"
	       	        android:textColor="@color/aliceblue"
	       	        android:padding="@dimen/large"/>
	       	     <TextView 
	       	        android:id="@+id/supportValMinDec_settings_tv"
	       	        android:layout_width="wrap_content"
	       	        android:layout_height="wrap_content"
	       	        android:textSize="@dimen/large"
	       	        android:textStyle="bold"
	       	        android:textColor="@color/aliceblue"
	       	        android:text="@string/less"/>
       	   	</LinearLayout>      
       	   	  <TextView 
	       	        android:id="@+id/supportDice"
	       	        android:layout_width="wrap_content"
	       	        android:layout_height="wrap_content"
	       	        android:textSize="@dimen/verylarge"
	       	        android:textStyle="bold"
	       	        android:textColor="@color/aliceblue"
	       	        android:text="@string/dice"
	       	        android:gravity="center"/>
       	    <LinearLayout 
       	        android:layout_width="fill_parent"
        		android:layout_height="wrap_content"  
        		android:orientation="vertical"
        		android:gravity="center"
        		android:layout_weight="1"> 
        		 <TextView 
	       	        android:id="@+id/supportValMaxInc_settings_tv"
	       	        android:layout_width="wrap_content"
	       	        android:layout_height="wrap_content"
	       	        android:textSize="@dimen/large"
	       	        android:text="@string/more"
	       	        android:textStyle="bold"
	       	        android:textColor="@color/aliceblue"/> 
	       	   <TextView 
	       	        android:id="@+id/supportValMax_settings_tv"
	       	        android:layout_width="wrap_content"
	       	        android:layout_height="wrap_content"
	       	        android:textSize="@dimen/verylarge"	       	        
	       	        android:textStyle="bold"
	       	        android:textColor="@color/aliceblue"
	       	        android:padding="@dimen/large"/>
	       	     <TextView 
	       	        android:id="@+id/supportValMaxDec_settings_tv"
	       	        android:layout_width="wrap_content"
	       	        android:layout_height="wrap_content"
	       	        android:textSize="@dimen/large"
	       	        android:text="@string/less"
	       	        android:textStyle="bold"
	       	        android:textColor="@color/aliceblue"/>	       	     
       	    </LinearLayout>
       	</LinearLayout>
        <TextView 
            android:id="@+id/support_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:textSize="@dimen/verysmall"
			android:textStyle="italic"
			android:textColor="@color/lightgray"
			android:text="@string/support_summary"
            android:gravity="center"
            android:layout_weight="1"
            android:paddingTop="@dimen/large"/>      
        <ImageView
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingBottom="2dp"
		    android:paddingTop="2dp" />
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView 
                android:id="@+id/acts_less_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/less"
				android:textSize="@dimen/medium"
				android:textStyle="bold"
				android:textColor="@color/aliceblue"
                android:gravity="left"
                android:layout_weight="1"
                android:paddingLeft="@dimen/small"/>
             <TextView 
                android:id="@+id/acts_number_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/acts_number_default"
                android:textSize="@dimen/verylarge"
                android:textStyle="bold"
                android:textColor="@color/aliceblue"
                android:gravity="center"
                android:padding="@dimen/large"
                android:layout_weight="1"/>
              <TextView 
                android:id="@+id/acts_more_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textSize="@dimen/medium"
				android:textStyle="bold"
				android:textColor="@color/aliceblue"
                android:text="@string/more"
                android:gravity="right"
                android:layout_weight="1"
                android:paddingRight="@dimen/small"/>            
        </LinearLayout>
         <TextView 
            android:id="@+id/acts_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:textSize="@dimen/verysmall"
			android:textStyle="italic"
			android:textColor="@color/lightgray"
			android:text="@string/acts_summary"
            android:gravity="center"
            android:layout_weight="1"/>             
        <ImageView
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingBottom="2dp"
		    android:paddingTop="2dp" />
        
        <TextView 
            android:id="@+id/rebuild_database_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rebuild_database"
            android:textSize="@dimen/large"
            android:textStyle="bold"
            android:textColor="@color/aliceblue"
            android:gravity="center"
            android:padding="@dimen/verylarge"/>

         <TextView
             android:id="@+id/rebuild_database_summary"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingBottom="@dimen/large"
             android:text="@string/rebuild_database_summary"
             android:textColor="@color/lightgray"
             android:textSize="@dimen/verysmall"
             android:textStyle="italic" />
         
        <ImageView
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:src="@android:drawable/divider_horizontal_dark"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:scaleType="fitXY"
		    android:paddingLeft="5dp"
		    android:paddingRight="5dp"
		    android:paddingBottom="2dp"
		    android:paddingTop="2dp" />
        <TextView 
            android:id="@+id/remove_scripts_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_scripts"
            android:textSize="@dimen/large"
            android:textStyle="bold"
            android:textColor="@color/aliceblue"
            android:gravity="center"
            android:padding="@dimen/verylarge"/>
        <TextView 
            android:id="@+id/remove_scripts_summary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_scripts_summary"
            android:textSize="@dimen/small"
            android:textStyle="italic"
            android:textColor="@color/lightgray"
            android:gravity="center"
            android:paddingBottom="@dimen/verysmall"/>
	</LinearLayout>
</ScrollView>